--- a/index.html
+++ b/index.html
@@ -17,29 +17,15 @@
                 autofocus
                 autocomplete="off"
         >
-        <button type="submit">submit</button>
+        <button type="submit">提交</button>
     </form>
 
     <div class="task-list">
-        <!--<div class="task-item">-->
-        <!--<span><input type="checkbox"></span>-->
-        <!--<span class="task-content">item</span>-->
-        <!--<span>delete</span>-->
-        <!--<span>detail</span>-->
-        <!--</div>-->
+
     </div>
     <div class="task-detail-mask"></div>
     <div class="task-detail">
-        <div class="content">下午记得买菜</div>
-        <div>
-            <div class="desc">
-                <textarea id=""></textarea>
-            </div>
-        </div>
-        <div class="remind">
-            <input type="date">
-            <!--<button type="submit">submit</button>-->
-        </div>
+
     </div>
 </div>
 <script src="node_modules/jquery/dist/jquery.js"></script>
