--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <title>My Todo App</title>
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="node_modules/jquery-datetimepicker/build/jquery.datetimepicker.min.css">
     <link rel="stylesheet" href="css/base.css">
 </head>
 <body>
+<div class="msg">
+    <div class="msg-content"></div>
+    <span class="anchor confirmed">知道了</span>
+</div>
 <div class="container">
     <h1>我的Todo</h1>
     <form class="add-task">
@@ -28,8 +33,10 @@
 
     </div>
 </div>
+<video class="alerter" src="Little Mix,Charlie Puth - Oops.mp3"></video>
 <script src="node_modules/jquery/dist/jquery.js"></script>
 <script src="node_modules/store/store.js"></script>
+<script src="node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.js"></script>
 <script src="js/base.js"></script>
 </body>
 </html>
